--- a/README
+++ b/README
@@ -17,7 +17,7 @@ About release
 This is pre-alpha release of GALex aimed to get feedback from developers.
 There are some issues to be resolved, changes to be made and a lot of
 testing to be done. This release contains all the features intended for
-the final release, but some of them might not actually work. Your feed is
+the final release, but some of them might not actually work. Your feedback is
 important, so if you have any questions, please send mail to
 kataklinger[at]gmail[dot]com.
 
